--- a/MyProject/index.html
+++ b/MyProject/index.html
@@ -8,6 +8,13 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+
+    <div class="container">
+        <div class="tictactoe"></div>
+        <div id="id" align=""center>
+            <span id="turn" align="">Player X</span>
+        </div>
+    </div>
     
     <script src="Js/index.js"></script>
 </body>
